Fixed z-index when overlay closed

--- a/fig-gallery.css
+++ b/fig-gallery.css
@@ -64,7 +64,7 @@
     border: 0;
     padding: 0;
     box-sizing: border-box;
-    z-index: 999;
+    z-index: -1;
 }
 
 .gallery .overlay button {
@@ -90,6 +90,7 @@
     max-width: 100%;
     max-height: 100%;
     opacity: 1;
+    z-index: 999;
 }
 
 .gallery.open .overlay[open] .overlay-content,
